--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,6 +10,8 @@
 
     <devicemagic.map.toggle.ToggleView
         android:layout_width="200dp"
+        app:primary_color="@color/colorPrimary"
+        app:stroke_color="@color/colorPrimary"
         android:layout_height="20dp"
         android:layout_centerInParent="true"
         android:layout_marginStart="8dp" />
