--- a/app/src/main/res/layout/content_java.xml
+++ b/app/src/main/res/layout/content_java.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="devicemagic.map.toggle.example.MainActivity"
-    tools:showIn="@layout/activity_main">
-
+    tools:context="devicemagic.map.toggle.example.JavaActivity"
+    tools:showIn="@layout/activity_java">
     <devicemagic.map.toggle.ToggleView
         android:layout_width="200dp"
         android:id="@+id/toggle_view"
@@ -17,5 +16,4 @@
         app:text_size="10dp"
         android:layout_centerInParent="true"
         android:layout_marginStart="8dp" />
-
 </RelativeLayout>
